--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a href="" class="navbar-brand">tindog</a>
+        <a href="#title" class="navbar-brand">tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dropdown-menu" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="dropdown-menu">
           <ul class="navbar-nav align ml-auto">
             <li class="nav-item">
-              <a href="" class="nav-link">Contact</a>
+              <a href="#footer" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Pricing</a>
+              <a href="#pricing" class="nav-link">Pricing</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Download</a>
+              <a href="#cta" class="nav-link">Download</a>
             </li>
           </ul>
         </div>
@@ -204,9 +204,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -214,6 +214,11 @@
   <!-- Footer -->
 
   <footer id="footer">
+
+    <i class="fab fa-twitter social-icon"></i>
+    <i class="fab fa-facebook-f social-icon"></i>
+    <i class="fab fa-instagram social-icon"></i>
+    <i class="fas fa-envelope social-icon"></i>
 
     <p>© Copyright 2018 TinDog</p>
 
